--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,8 +29,8 @@
             <ion-label>My Timesheet</ion-label>
           </ion-item>
         </ion-menu-toggle>
-        <ion-menu-toggle>
-          <ion-item lines="none" routerLink="/bookings">
+        <ion-menu-toggle >
+          <ion-item lines="none">
             <ion-icon name="star-outline" slot="start"></ion-icon>
             <ion-label>My Favorites</ion-label>
           </ion-item>
