--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <ion-app>
-  <ion-menu side="start">
+  <ion-menu contentId="main-content" side="start">
+    <div id="main-content"></div>
     <ion-header>
       <ion-toolbar color="primary">
         <ion-grid>
