--- a/src/app/places/offers/offer-bookings/offer-bookings.page.html
+++ b/src/app/places/offers/offer-bookings/offer-bookings.page.html
@@ -5,49 +5,43 @@
     </ion-buttons>
     
     
-    <ion-title> {{ isLoading ? 'Loading...' : place.firstName }} {{ isLoading ? 'Loading...' : place.lastName }} </ion-title>
+    <ion-title> {{ isLoading ? 'Loading...' : place.firstName }} </ion-title>
     <!-- ngIf="isAdmin(true)" -->
     <ion-buttons slot="primary" *ngIf="isAdmin(true)">
       <ion-button (click)="onDeleteEmployee(place.id)">
         <ion-icon name="close-circle-outline" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
-    
   </ion-toolbar>
 </ion-header>
 
 <ion-content >
-  
   <ion-grid class="ion-padding" *ngIf="!isLoading">
-  <div >
-  <ion-row>
+    <div >
+      <ion-row>
       <ion-col size-sm="6" offset-sm="3">
-          <ion-img [src]="place.imageUrl"></ion-img>
+        <ion-img [src]="place.imageUrl"></ion-img>
       </ion-col>  
-  </ion-row>  
-  </div>
+      </ion-row>  
+    </div>
       
-     
-        
-       <ion-row>
-         <ion-col size-sm="6" offset-sm="3">
-            
-           <ion-card-content>
-              <ion-card>
-                 <div class="ion-text-center" *ngIf="isLoading">
-        <ion-spinner color="primary"></ion-spinner>
-      </div>
+  <ion-row>
+  <ion-col size-sm="6" offset-sm="3">
+    <ion-card-content>
+      <ion-card>
+        <div class="ion-text-center" *ngIf="isLoading">
+          <ion-spinner color="primary"></ion-spinner>
+        </div>
                
-             <ion-toolbar><ion-text>Contact Information</ion-text></ion-toolbar>
-             <p class="ion-text-left" > &nbsp; First Name</p>
+        <ion-toolbar><ion-text>Contact Information</ion-text></ion-toolbar>
+          <p class="ion-text-left" > &nbsp; First Name</p>
           <ion-item>
              <ion-card-subtitle>{{ place.firstName }}</ion-card-subtitle>
           </ion-item> 
           <p class="ion-text-left" > &nbsp; Last Name</p>
-           <ion-item>
+          <ion-item>
             <ion-card-subtitle>{{ place.lastName }}</ion-card-subtitle>
-           </ion-item>
-          
+          </ion-item>
            <p class="ion-text-left" > &nbsp; Phone Number</p>
            <ion-item>
             <ion-card-subtitle>{{ place.phoneNumber }}</ion-card-subtitle>
@@ -64,33 +58,25 @@
           <ion-item>
             <ion-card-subtitle>{{place.payGroup}}</ion-card-subtitle>
           </ion-item>
-        </ion-card>
-          
-        </ion-card-content>
-          
-        </ion-col>
+      </ion-card>
+    </ion-card-content>
+  </ion-col>
+  </ion-row>
+
+    <div style="display: flex; justify-content: center;">
+      <ion-row>
+        <ion-col >  
+          <ion-button
+            *ngIf="isAdmin(true)"
+            margin
+            color="primary"
+            [routerLink]="['/', 'places', 'tabs', 'offers', 'edit', place.id]"
+            >Edit</ion-button
+            >
+        </ion-col> 
       </ion-row>
-      <div style="display: flex; justify-content: center;">
-            <ion-row>
-               <ion-col >
-                
-                  <ion-button
-                *ngIf="isAdmin(true)"
-                margin
-                color="primary"
-                [routerLink]="['/', 'places', 'tabs', 'offers', 'edit', place.id]"
-                >Edit</ion-button
-                >
-                
-              </ion-col> 
-            </ion-row>
-          </div> 
-      </ion-grid>
-
- 
-
-
-
+    </div>
+  </ion-grid>
 </ion-content>
     
           
