--- a/src/app/places/offers/new-offer/new-offer.page.html
+++ b/src/app/places/offers/new-offer/new-offer.page.html
@@ -14,6 +14,11 @@
 
 
 <ion-content> 
+  <ion-row class="ion-text-center">
+    <ion-col size-sm="3" offset-sm="3">
+      <app-image-picker (imagePick)="onImagePicked($event)"></app-image-picker>
+    </ion-col>
+  </ion-row>
   <div class="ion-text-center" *ngIf="isLoading">
     <ion-spinner color="primary"></ion-spinner>
   </div>
@@ -22,7 +27,6 @@
      <ion-row>
        <ion-col size-sm="6" offset-sm="3">
          <ion-card-content>
-          
             <ion-card> 
            <ion-toolbar><ion-text>Contact Information</ion-text></ion-toolbar>   
          <ion-item>
