--- a/src/app/shared/pickers/image-picker/image-picker.component.html
+++ b/src/app/shared/pickers/image-picker/image-picker.component.html
@@ -13,6 +13,13 @@
   *ngIf="!selectedImage"
   >
     <ion-icon name="camera" slot="start"></ion-icon>
-    <ion-label>Take Picture</ion-label>
+    <ion-label>Select Picture</ion-label>
   </ion-button>
 </div>
+
+<input 
+type="file"
+accept="image/jpeg"
+*ngIf="usePicker"  
+#filePicker (change)="onFileChosen($event)">
+
